// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Milestone Update Command - Help Text 1`] = `
"stdout:
"Usage: update [options] <id>

Update an existing project milestone

Arguments:
  id                           Milestone ID

Options:
  --name <name>                Milestone name
  --description <description>  Milestone description
  --target-date <date>         Target date (YYYY-MM-DD)
  --sort-order <value>         Sort order relative to other milestones
  --project <projectId>        Move to a different project
  -h, --help                   display help for command
"
stderr:
"""
`;

exports[`Milestone Update Command - Update Name 1`] = `
"stdout:
"✓ Updated milestone: Updated Milestone Name
  ID: milestone-123
  Target Date: 2026-03-31
  Sort Order: 0
  Project: Test Project
"
stderr:
"""
`;

exports[`Milestone Update Command - Update Multiple Fields 1`] = `
"stdout:
"✓ Updated milestone: Q2 Goals
  ID: milestone-456
  Target Date: 2026-06-30
  Sort Order: 1
  Project: Another Project
"
stderr:
"""
`;

exports[`Milestone Update Command - Update Sort Order 1`] = `
"stdout:
"✓ Updated milestone: Sorted Milestone
  ID: milestone-sort
  Target Date: 2026-06-15
  Sort Order: 5
  Project: Test Project
"
stderr:
"""
`;

exports[`Milestone Update Command - Update Sort Order Zero 1`] = `
"stdout:
"✓ Updated milestone: First Milestone
  ID: milestone-zero
  Target Date: 2026-01-15
  Sort Order: 0
  Project: Test Project
"
stderr:
"""
`;

exports[`Milestone Update Command - Update Target Date 1`] = `
"stdout:
"✓ Updated milestone: Existing Milestone
  ID: milestone-789
  Target Date: 2026-12-31
  Sort Order: 2
  Project: Final Project
"
stderr:
"""
`;
